tests/ui/codegen/mir/validation/parse_malformed_result.mir
//@compile-flags: --pass none

@module MalformedResult

fn @f() {
  bb0:
    %bad //~ ERROR: expected identifier
}
